--- a/events/safari.html
+++ b/events/safari.html
@@ -4,22 +4,22 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>SPCA Website</title>
-        <link href="style.css" rel="stylesheet" type="text/css" />
+        <link href="../style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <div class="navbar">
             <ul>
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a class="active" href="../index.html">Home</a></li>
+                <li><a href="../pricing.html">Pricing</a></li>
+                <li><a href="../contact.html">Contact</a></li>
                 <div class="dropdown">
                     <button class="dropbtn">Events
                         <i class="fa fa-caret-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="events/fundraise.html">Fundraising</a>
-                        <a href="events/expo.html">Animal Expo</a>
-                        <a href="events/safari.html">Safari</a>
+                        <a href="fundraise.html">Fundraising</a>
+                        <a href="expo.html">Animal Expo</a>
+                        <a href="safari.html">Safari</a>
                     </div>
                 </div>
             </ul>
