--- a/events/fundraise.html
+++ b/events/fundraise.html
@@ -5,24 +5,30 @@
         <meta name="viewport" content="width=device-width">
         <title>SPCA Website</title>
         <link href="../style.css" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="navbar">
-            <ul>
-                <li><a class="active" href="../index.html">Home</a></li>
-                <li><a href="../pricing.html">Pricing</a></li>
-                <li><a href="../contact.html">Contact</a></li>
-                <div class="dropdown">
-                    <button class="dropbtn">Events
-                        <i class="fa fa-caret-down"></i>
-                    </button>
-                    <div class="dropdown-content">
-                        <a href="fundraise.html">Fundraising</a>
-                        <a href="expo.html">Animal Expo</a>
-                        <a href="safari.html">Safari</a>
+        <header>
+            <div class="navbar">
+                <ul>
+                    <li><a class="active" href="../index.html">Home</a></li>
+                    <li><a href="../pricing.html">Pricing</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
+                    <div class="dropdown">
+                        <button class="dropbtn">Events
+                            <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="fundraise.html">Fundraising</a>
+                            <a href="expo.html">Animal Expo</a>
+                            <a href="safari.html">Safari</a>
+                        </div>
                     </div>
-                </div>
-            </ul>
-        </div>
+                </ul>
+            </div>
+        </header>
+        
     </body>
 </html>
