--- a/pricing.html
+++ b/pricing.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
@@ -18,7 +19,7 @@
                     <li><a href="contact.html">Contact</a></li>
                     <div class="dropdown">
                         <button class="dropbtn">Events
-                            <i class="fa fa-caret-down"></i>
+                            <i class="fa fa-angle-down"></i>
                         </button>
                         <div class="dropdown-content">
                             <a href="events/fundraise.html">Fundraising</a>
