--- a/index.html
+++ b/index.html
@@ -36,8 +36,18 @@
                 <h1>Critter Arena</h1>
             </div>
         </div>
-        <div>
-            <p class="hover-underline-animation">Hover this text to see the effect!</p>
+        <div class="info">
+            <img src="./img/corgi doggy.jpg" width="400px" class="corgi">
+            <div class="infoText">
+                dog person human meat tasty pork bun sausage roll spaghetti pasta pie mints bread toast lettuce eggs tomato potato burger 
+                salmon tuna cat fish food pineapple apple steak smoothies um salad ribs egg bacon lamb tacos avocado burrito init air conditioning 
+                student in classroom making sentence up for no good reason is pointless and he probably does not contribute to society 5w40 engine oil 
+                no further questions please and thank you my apologies for making such a horrendous sentence but I think that this sentence is not 
+                grammatically correct and this is better than lorem ipsum because I made it personally which means that I put all my brain power into 
+                making such a great sentence that even Albert Einstein would be creaking in his boots I bed his moustache would be falling off once he 
+                sees me placeholder text hand sanitiser input bee movie script in this paragraph of a thesis of an essay this sentence is so good that 
+                english teacher would make me teach for them because I am just too good at my job.
+            </div>
         </div>
     </body>
 </html>
