--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
         <div class="slideshow-container">
             <div class="slideshow fade">
                 <div class="slideshow-numbertext">1 / 4</div>
-                <img src="img/Slideshow/img1.jpg">
+                <img src="./img/slideshow/img1.jpg">
                 <div class="slideshow-text">Dog</div>
             </div>
             <div class="slideshow fade">
                 <div class="slideshow-numbertext">2 / 4</div>
-                <img src="img/Slideshow/img2.jpg">
+                <img src="./img/slideshow/img2.jpg">
                 <div class="slideshow-text">Cat</div>
             </div>
             <div class="slideshow fade">
                 <div class="slideshow-numbertext">3 / 4</div>
-                <img src="img/Slideshow/img3.jpg">
+                <img src="./img/slideshow/img3.jpg">
                 <div class="slideshow-text">Cat</div>
             </div>
             <div class="slideshow fade">
                 <div class="slideshow-numbertext">4 / 4</div>
-                <img src="img/Slideshow/img4.jpg">
+                <img src="./img/slideshow/img4.jpg">
                 <div class="slideshow-text">Dog</div>
             </div>
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -81,35 +81,15 @@
             <span class="slideshow-dot" onclick="currentSlide(3)"></span>
             <span class="slideshow-dot" onclick="currentSlide(4)"></span>
         </div>
-        <script>
-            var slideIndex = 1;
-            showSlides(1);
-
-            // Next/previous controls
-            function plusSlides(n) {
-                showSlides(slideIndex += n);
-            }
-
-            // Thumbnail image controls
-            function currentSlide(n) {
-                showSlides(slideIndex = n);
-            }
-
-            function showSlides(n) {
-                var i;
-                var slides = document.getElementsByClassName("slideshow");
-                var dots = document.getElementsByClassName("slideshow-dot");
-                if (n > slides.length) {slideIndex = 1}
-                if (n < 1) {slideIndex = slides.length}
-                for (i = 0; i < slides.length; i++) {
-                    slides[i].style.display = "none";
-                }
-                for (i = 0; i < dots.length; i++) {
-                    dots[i].className = dots[i].className.replace(" slideshow-dot-active", "");
-                }
-                slides[slideIndex-1].style.display = "block";
-                dots[slideIndex-1].className += " slideshow-dot-active";
-            }
-        </script>
+        <script src="./scripts/slideshow-script.js"></script>
+        <div class="footer">
+            <div class="icons">
+                <a href="https://www.facebook.com/RoyalNZSPCA/" target="_blank" rel="noreferrer noopener"><img src="./img/social-media-icons/facbook-icon.png"></a>
+                <a href="https://twitter.com/rnzspca?lang=en" target="_blank" rel="noreferrer noopener"><img src="./img/social-media-icons/twitter-icon.png"></a>
+                <a href="https://www.instagram.com/spcanz/?hl=en" target="_blank" rel="noreferrer noopener"><img src="./img/social-media-icons/instagram-icon.png"></a>
+                <a href="https://www.youtube.com/channel/UCuLDmwXFDos_XO7gqgoIBHQ" target="_blank" rel="noreferrer noopener"><img src="./img/social-media-icons/youtube-icon.png"></a>
+            </div>
+            fdsa
+        </div>
     </body>
 </html>
