--- a/events/expo.html
+++ b/events/expo.html
@@ -29,6 +29,18 @@
                 </ul>
             </div>
         </header>
-        
+        <div class="footer">
+            <div class="text">
+                Created by Angelo <br>
+                <a href="https://pixabay.com/service/license/" target="_blank" rel="noreferrer noopener">Pixabay Licenses</a> <br>
+                <a href="https://smoke.co.nz/spark-arena-auckland-events" target="_blank" rel="noreferrer noopener">Credits for the Spark Arena image for the banner.</a>
+            </div>
+            <div class="icons">
+                <a href="https://www.facebook.com/RoyalNZSPCA/" target="_blank" rel="noreferrer noopener"><img src="./img/social-media-icons/facbook-icon.png"></a>
+                <a href="https://twitter.com/rnzspca?lang=en" target="_blank" rel="noreferrer noopener"><img src="./img/social-media-icons/twitter-icon.png"></a>
+                <a href="https://www.instagram.com/spcanz/?hl=en" target="_blank" rel="noreferrer noopener"><img src="./img/social-media-icons/instagram-icon.png"></a>
+                <a href="https://www.youtube.com/channel/UCuLDmwXFDos_XO7gqgoIBHQ" target="_blank" rel="noreferrer noopener"><img src="./img/social-media-icons/youtube-icon.png"></a>
+            </div>
+        </div>
     </body>
 </html>
