--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </ul>
             </div>
         </header>
-        <div class="banner">
+        <div class="banner-home">
             <div class="banner-text">
                 <h4>This is</h4>
                 <h1>Critter Arena</h1>
@@ -82,14 +82,21 @@
             <span class="slideshow-dot" onclick="currentSlide(4)"></span>
         </div>
         <script src="./scripts/slideshow-script.js"></script>
+        <div class="spca-logo">
+            <a href="https://www.spca.nz/" target="_blank" rel="noreferrer noopener"><img src="./img/SPCA Logo.jpeg"></a>
+        </div>
         <div class="footer">
+            <div class="text">
+                Created by Angelo <br>
+                <a href="https://pixabay.com/service/license/" target="_blank" rel="noreferrer noopener">Pixabay Licenses</a> <br>
+                <a href="https://smoke.co.nz/spark-arena-auckland-events" target="_blank" rel="noreferrer noopener">Credits for the Spark Arena image for the banner.</a>
+            </div>
             <div class="icons">
                 <a href="https://www.facebook.com/RoyalNZSPCA/" target="_blank" rel="noreferrer noopener"><img src="./img/social-media-icons/facbook-icon.png"></a>
                 <a href="https://twitter.com/rnzspca?lang=en" target="_blank" rel="noreferrer noopener"><img src="./img/social-media-icons/twitter-icon.png"></a>
                 <a href="https://www.instagram.com/spcanz/?hl=en" target="_blank" rel="noreferrer noopener"><img src="./img/social-media-icons/instagram-icon.png"></a>
                 <a href="https://www.youtube.com/channel/UCuLDmwXFDos_XO7gqgoIBHQ" target="_blank" rel="noreferrer noopener"><img src="./img/social-media-icons/youtube-icon.png"></a>
             </div>
-            fdsa
         </div>
     </body>
 </html>
