--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>SPCA Website</title>
-        <link href="../style.css" rel="stylesheet" type="text/css" />
+        <link href="style.css" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
@@ -14,21 +14,20 @@
         <header>
             <div class="navbar">
                 <ul>
-                    <li><a class="active" href="../index.html">Home</a></li>
-                    <li><a href="../pricing.html">Pricing</a></li>
-                    <li><a href="../contact.html">Contact</a></li>
-                    <div class="dropdown">
-                        <button class="dropbtn">Events
-                            <i class="fa fa-angle-down"></i>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="fundraise.html">Fundraising</a>
-                            <a href="expo.html">Animal Expo</a>
-                        </div>
-                    </div>
+                    <ul>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="pricing.html">PRICING</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
+                        <li><a class="active" href="events.html">EVENTS</a></li>
+                    </ul>
                 </ul>
             </div>
         </header>
+        <div class="banner-pricing">
+            <div class="banner-text">
+                <h1>Pricing</h1>
+            </div>
+        </div>
         <div class="footer">
             <div class="text">
                 Created by Angelo <br>
