--- a/index.html
+++ b/index.html
@@ -14,20 +14,10 @@
         <header>
             <div class="navbar">
                 <ul>
-                    <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li>
-                        <div class="dropdown">
-                            <button class="dropbtn">Events
-                                <i class="fa fa-angle-down"></i>
-                            </button>
-                            <div class="dropdown-content">
-                                <a href="events/fundraise.html">Fundraising</a>
-                                <a href="events/expo.html">Animal Expo</a>
-                            </div>
-                        </div>
-                    </li>
+                    <li><a class="active" href="index.html">HOME</a></li>
+                    <li><a href="pricing.html">PRICING</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="events.html">EVENTS</a></li>
                 </ul>
             </div>
         </header>
