--- a/contact.html
+++ b/contact.html
@@ -30,16 +30,22 @@
             </div>
         </div>
         <div class="footer">
-            <div class="text">
-                Created by Angelo <br>
-                <a href="https://pixabay.com/service/license/" target="_blank" rel="noreferrer noopener">Pixabay Licenses</a> <br>
-                <a href="https://smoke.co.nz/spark-arena-auckland-events" target="_blank" rel="noreferrer noopener">Credits for the Spark Arena image for the banner.</a>
+            <div class="socials">
+                <a href="https://www.instagram.com/spcanz/?hl=en" target="_blank" rel="noreferrer noopener"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.youtube.com/channel/UCuLDmwXFDos_XO7gqgoIBHQ" target="_blank" rel="noreferrer noopener"><i class="fa fa-youtube"></i></a>
+                <a href="https://www.facebook.com/RoyalNZSPCA/" target="_blank" rel="noreferrer noopener"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.facebook.com/RoyalNZSPCA/" target="_blank" rel="noreferrer noopener"><i class="fa fa-facebook-f"></i></a>
             </div>
-            <div class="icons">
-                <a href="https://www.facebook.com/RoyalNZSPCA/" target="_blank" rel="noreferrer noopener"><img src="./img/social-media-icons/facbook-icon.png"></a>
-                <a href="https://twitter.com/rnzspca?lang=en" target="_blank" rel="noreferrer noopener"><img src="./img/social-media-icons/twitter-icon.png"></a>
-                <a href="https://www.instagram.com/spcanz/?hl=en" target="_blank" rel="noreferrer noopener"><img src="./img/social-media-icons/instagram-icon.png"></a>
-                <a href="https://www.youtube.com/channel/UCuLDmwXFDos_XO7gqgoIBHQ" target="_blank" rel="noreferrer noopener"><img src="./img/social-media-icons/youtube-icon.png"></a>
+            <div class="list">
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="pricing.html">PRICING</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="events.html">EVENTS</a></li>
+                </ul>
+            </div>
+            <div class="copyright">
+                <p>Made by Jello @ 2022</p>
             </div>
         </div>
     </body>
