--- a/events.html
+++ b/events.html
@@ -16,16 +16,15 @@
                 <ul>
                     <ul>
                         <li><a href="index.html">HOME</a></li>
-                        <li><a href="pricing.html">PRICING</a></li>
-                        <li><a href="contact.html">CONTACT</a></li>
                         <li><a class="active" href="events.html">EVENTS</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </ul>
             </div>
         </header>
-        <div class="banner-pricing">
+        <div class="banner-events">
             <div class="banner-text">
-                <h1>Pricing</h1>
+                <h1>Events</h1>
             </div>
         </div>
         <div class="footer">
@@ -38,9 +37,8 @@
             <div class="list">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="pricing.html">PRICING</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="events.html">EVENTS</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <div class="copyright">
