--- a/index.html
+++ b/index.html
@@ -30,14 +30,20 @@
             <img src="./img/labrador retriever.jpg" width="400px" class="labrador">
             <div class="infoText">
                 <h2>About Critter Arena</h2>
-                <p>dog person human meat tasty pork bun sausage roll spaghetti pasta pie mints bread toast lettuce eggs tomato potato burger 
+                <p>
+                    The Royal New Zealand Society for the Prevention of Cruelty to Animals Incorporated (the SPCA) has won a compitition and obtained
+                    the naming rights to one of New Zealand's largest event spaces, previously known as Vector Aerna. They wanted to rebrand the arena
+                    to better suit animals and the SPCA. As a result, the arena is now know as Critter Arena! Critter Arena is an event space which dedicates
+                    towards helping animals in need.
+                </p>
+                <!-- dog person human meat tasty pork bun sausage roll spaghetti pasta pie mints bread toast lettuce eggs tomato potato burger 
                 salmon tuna cat fish food pineapple apple steak smoothies um salad ribs egg bacon lamb tacos avocado burrito init air conditioning 
                 student in classroom making sentence up for no good reason is pointless and he probably does not contribute to society 5w40 engine oil 
                 no further questions please and thank you my apologies for making such a horrendous sentence but I think that this sentence is not 
                 grammatically correct and this is better than lorem ipsum because I made it personally which means that I put all my brain power into 
                 making such a great sentence that even Albert Einstein would be creaking in his boots I bed his moustache would be falling off once he 
                 sees me placeholder text hand sanitiser input bee movie script in this paragraph of a thesis of an essay this sentence is so good that 
-                english teacher would make me teach for them because I am just too good at my job.</p>
+                english teacher would make me teach for them because I am just too good at my job. -->
             </div>
         </div>
         <div class="slideshow-container">
