--- a/events.html
+++ b/events.html
@@ -27,6 +27,26 @@
                 <h1>Events</h1>
             </div>
         </div>
+        <div class="info">
+            <img src="./img/Cat With Blue Eyes.jpg" width="200px" class="labrador">
+            <div class="infoText">
+                <h2>Events Happening</h2>
+                <p>
+                    There will be various events held at the newly named Critter arena. Some of which will be in relation to animals. We encourge you to
+                    bring your pets as we are promoting animal health. We are holding a raffle where people will get extra tickets based on the amount of 
+                    pets they bring. Another event we will be holding is the pet and owner run. This event will be where petowners and their pets run alongside
+                    each other and perform a 5km run. There will also be an animal expo held where you can find various animals there!
+                </p>
+                <!-- dog person human meat tasty pork bun sausage roll spaghetti pasta pie mints bread toast lettuce eggs tomato potato burger 
+                salmon tuna cat fish food pineapple apple steak smoothies um salad ribs egg bacon lamb tacos avocado burrito init air conditioning 
+                student in classroom making sentence up for no good reason is pointless and he probably does not contribute to society 5w40 engine oil 
+                no further questions please and thank you my apologies for making such a horrendous sentence but I think that this sentence is not 
+                grammatically correct and this is better than lorem ipsum because I made it personally which means that I put all my brain power into 
+                making such a great sentence that even Albert Einstein would be creaking in his boots I bed his moustache would be falling off once he 
+                sees me placeholder text hand sanitiser input bee movie script in this paragraph of a thesis of an essay this sentence is so good that 
+                english teacher would make me teach for them because I am just too good at my job. -->
+            </div>
+        </div>
         <div class="footer">
             <div class="socials">
                 <a href="https://www.instagram.com/spcanz/?hl=en" target="_blank" rel="noreferrer noopener"><i class="fa fa-instagram"></i></a>
